<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Color Master</string>

    <!--Color names-->
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_blue">Blue</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_brown">Brown</string>
    <!--End color names-->

    <!--App strings-->
    <string name="game_over">GAME OVER</string>
    <string name="score">SCORE</string>
    <string name="best">BEST</string>
    <string name="tip">If text color same as color name swipe top, otherwise - down</string>
    <string name="tip_2">But be careful!\n You have not much time and two screens.</string>
    <string name="tap_to_continue">Tap to continue!</string>
    <string name="tip_dont_show_again">Do not show this tip again</string>
    <string name="left_side">LEFT</string>
    <string name="right_side">RIGHT</string>
    <string name="level_easy">easier</string>
    <string name="level_medium">harder</string>
    <string name="level_hard">Hard</string>

    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="check_internet">Please check your internet connection!</string>

    <string name="share_dialog_part_1">WOW! I scored&#160;</string>
    <string name="share_dialog_part_2">&#160;points in Color Master game on Android </string>
    <string name="share_dialog_part_3">&#160;linkToTheGameOnAndroidMarket&#160;</string>
    <!--End app strings-->

    <!--Strings for appRaterDialog-->
    <string name="erd_title">Rate this app!</string>
    <string name="erd_message">Hi, take a minute to rate this app and help support to improve more new features. ;)</string>
    <string name="erd_no_thanks">No, thanks</string>
    <string name="erd_remind_me_later">Remind me later</string>
    <string name="erd_rate_now">Rate now</string>
    <!--End appRaterDialog-->

</resources>
