<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_game_over"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/grey_500"
    android:orientation="vertical"
    android:visibility="invisible"
    android:weightSum="4">

    <com.colormaster.game.views.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/game_over"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <ImageButton
        android:id="@+id/game_over_btn_replay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/play_black"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.colormaster.game.views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/score"
                android:textSize="25sp"
                android:textColor="@android:color/black"/>

            <com.colormaster.game.views.CustomFontTextView
                android:id="@+id/game_over_tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="0"
                android:textSize="25sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.colormaster.game.views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/best"
                android:textSize="25sp"
                android:textColor="@android:color/black"/>

            <com.colormaster.game.views.CustomFontTextView
                android:id="@+id/game_over_tv_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="0"
                android:textSize="25sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <ImageButton
            style="@style/OptionImageButton"
            android:src="@drawable/share" />

        <ImageButton
            style="@style/OptionImageButton"
            android:src="@drawable/share" />

        <ImageButton
            style="@style/OptionImageButton"
            android:src="@drawable/leaderboard_black" />

    </LinearLayout>

</LinearLayout>